<resources>
    <string name="app_name">Marvel</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Stan Lee</string>
    <string name="nav_header_subtitle" translatable="false">MarvelFan@android.com</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="hint_email" translatable="false">MarvelFan@gmail.com</string>
    <string name="hint_password" translatable="false">**********</string>
    <string name="btn_register">Register</string>
    <string name="btn_SignIn">Log In</string>
    <string name="menu_logout">Log Out</string>
    <string name="title_AuthActivity">Log In</string>
    <string name="title_HomeActivity">Home</string>
    <string name="btn_Google" translatable="false">Google</string>
    <string name="prefs_file" translatable="false">com.android.marvel.PREFERENCE_FILE_KEY</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_comics" translatable="false">Comics</string>
    <string name="btn_change_name">Modify name</string>
    <string name="btn_camera">Take a new pic</string>
    <string name="hint_username">New name...</string>
    <string name="menu_characters">Characters</string>
    <string name="menu_Search">Search by Name...</string>
</resources>